# wincorp-odin

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
migrations/: 001_llm_usage.sql
specs/: _SPEC-TEMPLATE.md  llm-factory.spec.md  messaging.spec.md  orchestration.spec.md  sandbox-audit.spec.md  valkyries.plan.md  valkyries.spec.md
src/wincorp_odin/: __init__.py
src/wincorp_odin/llm/: __init__.py  _registry.py  _whitelist.py  circuit_breaker.py  client.py  config.py  exceptions.py  factory.py  helpers.py  legacy.py  retry.py  tokens.py
src/wincorp_odin/messaging/: __init__.py  base.py  commands.py  rate_limit.py  registry.py  security.py
src/wincorp_odin/orchestration/: __init__.py  _entry.py  _json_safe.py  exceptions.py  executor.py  middleware.py  result.py  sinks.py  state.py  types.py  valkyries.py
src/wincorp_odin/security/: __init__.py  sandbox_audit.py
tests/llm/: conftest.py  test_circuit_breaker.py  test_client.py  test_config.py  test_coverage.py  test_factory.py  test_factory_integration.py  test_helpers.py  test_integration.py  test_retry.py  test_stream_usage.py  test_tokens.py
tests/llm/fixtures/: models_full.yaml  models_malformed.yaml  models_minimal.yaml  models_non_anthropic.yaml
tests/messaging/: test_base.py  test_commands.py  test_rate_limit.py  test_registry.py  test_security.py  test_telegram.py  test_whatsapp.py
tests/orchestration/: __init__.py  conftest.py  test_exceptions.py  test_executor_basic.py  test_executor_concurrent.py  test_executor_coverage.py  test_executor_edge.py  test_executor_overflow.py  test_executor_precedence.py  test_json_safe.py  test_middleware.py  test_result.py  test_sinks.py  test_state.py  test_types.py  test_valkyries_coverage.py  test_valkyries_factory.py  test_valkyries_loader.py  test_valkyries_stress.py  test_valkyries_toolguard.py
tests/security/: test_sandbox_audit.py
(+3 files in other folders)
